    when adding the Logtalk mime-type to the Shared MIME-info Database.

    Corrected a harmless syntax error in the Logtalk POSIX install shell
    script when the "update-mime-database" command is not available.

    Added a Logtalk version of the "Closed Knight's Tour" SWI-Prolog CLP(FD)
    example written by Markus Triska.


2.37.5 - October 29, 2009

    Updated the Logtalk multi-threading features, replacing all calls to
    the call_cleanup/2 built-in predicate with calls to the more reliable
    setup_call_cleanup/3 built-in predicate. This change requires recent
    versions of SWI-Prolog, XSB, and YAP when writing multi-threading code.

    Improved performance of the database built-in methods retractall/1 and
    retract/1 whenever their use requires updating the internal predicate
    definition lookup tables.

    Corrected a bug in the Logtalk runtime when printing a compatibility
    warning regarding the back-end Prolog compiler version being used.

    Corrected a bug in the implementation of the :/1 control construct when
    some but not all imported categories are compiled for static binding.

    Corrected a event handling bug in the processing of meta-calls whose
    meta-arguments have the format Object::Closure.

    Corrected a bug in the runtime error handler for top-level message sending
    calls where the reported exception term context argument would be unbound.

    Corrected a bug in the compilation of multifile directives and multifile
    predicate clauses within objects and categories for the pseudo-object
    "user". Corrected a bug in the compilation of multifile predicate clauses
    for other objects and categories.

    Corrected a safety meta-predicate compilation bug when using static
    binding to optimize a call to a local meta-predicate made by a normal,
    public predicate.

    Corrected a safety meta-predicate compilation bug when using a meta-